--- a/app/views/create-account/inputter/rejected.html
+++ b/app/views/create-account/inputter/rejected.html
@@ -55,15 +55,15 @@
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
       
-            <th scope="col" class="govuk-table__header" style="width: 20%;" aria-sort="none">Defendant</th>
+            <th scope="col" class="govuk-table__header" style="width: 25%;" aria-sort="none">Defendant</th>
             
-            <th scope="col" class="govuk-table__header" style="width: 20%;" aria-sort="none">Date of birth</th>
+            <th scope="col" class="govuk-table__header" style="width: 15%;" aria-sort="none">Date of birth</th>
 
-            <th scope="col" class="govuk-table__header" style="width: 20%;" aria-sort="none">Created</th>
+            <th scope="col" class="govuk-table__header" style="width: 15%;" aria-sort="none">Created</th>
+
+            <th scope="col" class="govuk-table__header" style="width: 20%;" aria-sort="none">Account type</th>
       
-            <th scope="col" class="govuk-table__header" style="width: 20%;" aria-sort="none">Business unit</th>
-
-            <th scope="col" class="govuk-table__header" style="width: 20%;" aria-sort="none">Rejected by</th>
+            <th scope="col" class="govuk-table__header" style="width: 25%;" aria-sort="none">Business unit</th>
           </tr>
         </thead>
       
@@ -71,15 +71,15 @@
 
           <tr class="govuk-table__row">
       
-            <td class="govuk-table__cell"><a href="../check-all.html?name=JonesMichael" class="govuk-link govuk-link--no-underlines govuk-link--no-visited-state">JONES, Michael</a></td>
+            <td class="govuk-table__cell"><a href="#" class="govuk-link govuk-link--no-underlines govuk-link--no-visited-state">JONES, Michael</a></td>
       
             <td class="govuk-table__cell">30 Jan 1992</td>
 
             <td class="govuk-table__cell">1 day ago</td>
       
-            <td class="govuk-table__cell">Cambridgeshire</td>
+            <td class="govuk-table__cell">Fixed penalty</td>
 
-            <td class="govuk-table__cell">sally.hughes</td>
+            <td class="govuk-table__cell">Avon and Somerset</td>
           </tr>
       
         </tbody>
