--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -71,6 +71,25 @@
   display: block;
 }
 
+.moj-notification-badge {
+  font-family: "GDS Transport", arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-weight: 700;
+  font-size: 0.875rem;
+  line-height: 1.1428571429;
+  color: #ffffff;
+  display: inline-block;
+  min-width: 12px;
+  padding: 4px 8px 4px 8px;
+  border-radius: 75px;
+  background-color: #d4351c;
+  font-size: 16px;
+  font-weight: 600;
+  text-align: center;
+  white-space: nowrap;
+}
+
 // MOJ DATE PICKER
 
 .moj-datepicker {
